[package]
name = "hell"
version = "0.0.1"
authors = ["McKayla Washburn <mckayla@hey.com>"]
edition = "2018"

[dependencies]
amethyst = { version = "0.15.3", features = ["metal"] }
# amethyst = { version = "0.15.3", features = ["vulkan"] }

# [dependencies.amethyst]
# version = "0.15.3"
# features = ["metal"]
# features = ["vulkan"]
